# pycoraza

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  SECURITY.md  hatch_build.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: bench.yml  ci.yml  docs.yml  ftw.yml  news-check.yml  release.yml  upstream-bump.yml  wheel-smoke.yml
THIRD_PARTY_LICENSES/: coraza-LICENSE  coreruleset-LICENSE  libcoraza-LICENSE
bench/: README.md  _runner.sh  _verify_blocking.sh  k6_run.py  requirements.txt  run.py  wheel_smoke.sh
bench/baselines/: django.json  fastapi.json  flask.json  starlette.json
bench/k6/: mixed.js
docs/: client-ip.md  crs-profiles.md  django.md  fastapi.md  flask.md  middleware-ordering.md  performance.md  quickstart.md  scaling.md  security-checklist.md  starlette.md  threat-model.md
docs/site/: app.js  index.html  styles.css
examples/django_app/: README.md  manage.py  requirements.txt
examples/django_app/django_app/: asgi.py  settings.py  urls.py  views.py  wsgi.py
examples/fastapi_app/: README.md  app.py  requirements.txt
examples/flask_app/: README.md  app.py  requirements.txt
examples/shared/: README.md  pycoraza_shared.py  pyproject.toml
examples/starlette_app/: README.md  app.py  requirements.txt
native/: build_ffi.py  coraza_cdef.h  version.txt
native/scripts/: build-libcoraza.sh
news/: README.md  abi3-single-wheel.fix.md  add-django-adapter.feature.md  asgi-allow-fix.fix.md  body-limits.feature.md  bump-libcoraza-20260509.change.md  bump-libcoraza-20260510.change.md  bypass-cluster.security.md  expose-matched-rules.feature.md  extract-client-ip.feature.md  fail-closed-bodyread.fix.md  inspect-response-block.fix.md  license-notice.legal.md  middleware-ordering-doc.feature.md  preserve-multi-value-headers.fix.md  sdist-fix.fix.md  skip-static-default.security.md  trusted-proxy-explicit.security.md  tx-inspectability.feature.md  version-from-metadata.fix.md  wafpool-removed.removed.md  wheel-smoke-ci.feature.md
src/pycoraza/: __init__.py  _body.py  _signals.py  abi.py  client_ip.py  logger.py  pool.py  skip.py  transaction.py  types.py  waf.py
src/pycoraza/_bindings/: __init__.py
src/pycoraza/coreruleset/: __init__.py  _profiles.py
src/pycoraza/coreruleset/rules/: .keep
src/pycoraza/django/: __init__.py
src/pycoraza/fastapi/: __init__.py
src/pycoraza/flask/: __init__.py
src/pycoraza/starlette/: __init__.py
testing/ftw/: README.md  RESULTS.md  ftw-overrides-django.yaml  ftw-overrides-fastapi.yaml  ftw-overrides-flask.yaml  ftw-overrides-starlette.yaml  ftw-overrides.yaml  run.sh
tests/: _fake_abi.py  conftest.py
tests/callbacks/: test_gil_threads.py
tests/django/: conftest.py  test_body_limits.py  test_bypass_cluster.py  test_edge_paths.py  test_middleware.py
tests/e2e/: conftest.py  test_attacks.py
tests/fastapi/: test_reexport.py
tests/flask/: test_body_limits.py  test_bypass_cluster.py  test_error_paths.py  test_middleware_mock.py  test_middleware_scenarios.py  test_multi_value_headers.py
tests/integration/: conftest.py  test_smoke.py
tests/signals/: test_handler_audit.py
tests/starlette/: test_body_limits.py  test_bypass_cluster.py  test_error_paths.py  test_middleware_mock.py  test_middleware_scenarios.py  test_multi_value_headers.py
tests/unit/: test_abi.py  test_abi_edge.py  test_body.py  test_client_ip.py  test_coreruleset.py  test_logger.py  test_on_waf_error_callable.py  test_pool.py  test_recommended_id_collision.py  test_signals.py  test_skip.py  test_transaction.py  test_types.py  test_waf.py  test_waf_like.py
